--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,8 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/categories">Categories</HeaderLink>
-			<HeaderLink href="/tags">Tags</HeaderLink>
+			<HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
@@ -49,7 +47,7 @@ import { SITE_TITLE } from '../consts';
 		margin: 0;
 		padding: 0 1em;
 		background: rgb(var(--background-secondary));
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
+		border-bottom: 1px solid rgba(var(--gray-light), 0.3);
 	}
 	h2 {
 		margin: 0;
@@ -67,9 +65,9 @@ import { SITE_TITLE } from '../consts';
 		justify-content: space-between;
 	}
 	nav a {
-		padding: 1em 0.5em;
+		padding: 0.75em 0.5em;
 		color: rgb(var(--gray-dark));
-		border-bottom: 4px solid transparent;
+		border-bottom: 2px solid transparent;
 		text-decoration: none;
 	}
 	nav a.active {
@@ -79,6 +77,10 @@ import { SITE_TITLE } from '../consts';
 	.social-links,
 	.social-links a {
 		display: flex;
+	}
+	.social-links svg {
+		width: 24px;
+		height: 24px;
 	}
 	@media (max-width: 720px) {
 		nav {
